After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 659816 - Presence misaligned in muc user tooltips
Presence misaligned in muc user tooltips
Status: RESOLVED FIXED
Product: empathy
Classification: Core
Component: Multi User Chat
2.33.x
Other Linux
: Normal normal
: ---
Assigned To: empathy-maint
Depends on:
Blocks:
 
 
Reported: 2011-09-22 12:09 UTC by Guillaume Desmottes
Modified: 2011-09-26 09:55 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
contact-widget: left align status label (1.10 KB, patch)
2011-09-22 12:36 UTC, Guillaume Desmottes
committed Details | Review

Description Guillaume Desmottes 2011-09-22 12:09:51 UTC
Tooltip of muc contacts is bugged: the presence is centered.
Comment 1 Guillaume Desmottes 2011-09-22 12:36:38 UTC
Created attachment 197239 [details] [review]
contact-widget: left align status label

It's already done that way in individual-widget.
Comment 2 Xavier Claessens 2011-09-22 12:37:54 UTC
looks good, +1
Comment 3 Guillaume Desmottes 2011-09-26 09:55:33 UTC
Attachment 197239 [details] pushed as 09ccdc3 - contact-widget: left align status label