contact-widget: left align status label

It's already done that way in individual-widget.

https://bugzilla.gnome.org/show_bug.cgi?id=659816